# plone-pgcatalog

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARKS.md  CHANGES.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: docs.yaml  qa.yaml  release.yaml  tests.yaml
benchmarks/: _test_catalog_swap.py  bench_catalog.py  bench_object_provides.sql  bench_plone_catalog.py  data_generator.py  profile_writes.py  results-clean-break-level1.json  results-clean-break-level2.json  results-cmfcore-treewalk.json  results-level2.json  results-security-decls-level2.json  results-security-decls-v2.json  results.json  run_benchmarks.py
development/: docker-compose.yml  requirements.txt
development/plone/: Dockerfile  zope.conf
docs/: article-pgcatalog.md  cmfeditions-overhead.md  move-optimization.md
docs/plans/: 2026-04-01-skip-transforms-tika-design.md  2026-04-01-skip-transforms-tika-plan.md  2026-04-02-query-result-cache-design.md  2026-04-03-smart-index-suggestions-design.md  2026-04-03-smart-index-suggestions-plan.md  2026-04-09-pgcatalog-idx-column-extraction.md  2026-04-13-wrap-catalog-getindex.md  2026-04-14-suggestions-engine-pr2-plan.md  2026-04-15-strip-path-from-idx-jsonb.md  2026-04-15-suggestions-engine-pr-alpha-plan.md  2026-04-15-wrap-catalog-indexes-attr.md  async-tika-extraction.md  bm25-integration-analysis.md  clean-break-and-eea-faceted.md  fulltext-search-postgres-report.md  level1-weighted-ranking-plan.md  level2-bm25-backend-plan.md  level3-multilingual-tokenizer-plan.md
docs/sources/: conf.py  index.md  llms.txt
docs/sources/_static/: site.webmanifest
docs/sources/_templates/: layout.html
docs/sources/explanation/: addon-integrations.md  architecture.md  bm25-design.md  caching.md  fulltext-search.md  index.md  performance.md  security.md  tika-extraction.md  why-postgresql.md
docs/sources/how-to/: configure-multilingual.md  custom-blob-searchabletext.md  debug-queries.md  deploy-production.md  enable-bm25.md  enable-tika-extraction.md  index.md  (+5 more)
example/: README.md  create_site.py  docker-compose.yml  fetch_wikipedia.py  requirements.txt  seed_content.py  zope.conf  zope.ini
example/pgcatalog-example-distribution/: pyproject.toml
example/pgcatalog-example-distribution/src/pgcatalog_example/: dependencies.zcml  distributions.zcml
example/pgcatalog-example-distribution/src/pgcatalog_example/distributions/pgcatalog_demo/: profiles.json  schema.json
example/scripts/: create_plain_site.py  create_site.py  fetch_wikipedia.py  migrate_to_pgcatalog.py  seed_content.py
tests/: conftest.py  test_backends.py  test_bm25_integration.py  test_brain.py  test_cache.py  test_catalog_indexes_view.py  test_catalog_plone.py  test_clean_break.py  test_collect_ref_oids.py  test_columns.py  test_config.py  test_dri.py  test_driri.py  test_faceted_compat.py  test_flush.py  test_fulltext.py  test_indexers.py  test_indexing.py  test_integration.py  test_interfaces.py  test_move.py  test_move_integration.py  test_path.py  test_pg_integration.py  test_pgindex.py  test_plone_integration.py  test_query.py  test_query_integration.py  test_query_modifier.py  test_registry.py  test_schema.py  test_security.py  test_security_hardening.py  test_setuphandlers.py  test_slow_queries.py  test_startup.py  test_strip_path_from_idx.py  test_suggestions.py  test_tika_enqueue.py  test_tika_worker.py  (+1 more)
tryout/: docker-compose.yml
tryout/nginx/: default.conf
tryout/plone/: Dockerfile  zope.conf
(+78 files in other folders)
